---------------------------
-- ChangeLog - abn --
---------------------------

2023-11-03 Matteo Delucchi (version 3.0.3)
  * Temporarily fixed tests on CRAN Fedora falvour.

2023-10-23 Matteo Delucchi (version 3.0.2)
  * Temporarily fixed tests on CRAN for multithreading.
  * Replaced README.md file.
  * Fixed bug in plotAbn() causing non-sensical edge labels.
  * New CoC and Licence files.
  * Updated examples in documentation.

2023-09-29 Matteo Delucchi (version 3.0.1)
  * Patched memory access error in source code.
  * Fixed reverse dependency to `mcmcabn()`.

2023-09-01 Matteo Delucchi (version 3.0.0)
  * Implemented random-intercept model for `method="mle"` with argument `group.var`.
  * simulateAbn(): Fixed to run with all arguments. Enhancement: Simulates a hierarchical model if `group.var` is provided.
  * Fixed parallel computing for `method="mle"` that did not always run smoothly.
  * Beware, the structure of some objects has changed!
  * Updated documentation to Roxygen.
  * Rigorous checking of function arguments.
  * Upgraded unit test for testthat e3.
  * Implemented extensive unit tests and CI/CD pipelines.
  * Many (!) bugs fixed that mainly flew under the radar.
  * Removed deprecated functions.
  * Refactoring here and there. Especially to harmonise `buildScoreCache()` and `fitAbn()` for both methods "mle" and "bayes".

2022-04-02 Reinhard Furrer  (version 2.7-0)

  * plotAbn(): new arguments, now fully based on class `graphAM`, proper handling of lty, lwd etc.
  * options of `fitAbn()` and `buildScoreCache()` are now handled with a list passed to argument `control=`. Some of the default values have been slightly adapted.
  * Default list available via `fit.control()` and `build.control()`, including more options!
  * Significantly improved help of several functions and examples.
  * Improved display of print methods.
  * Possiblity to use single threaded with `for()` loop and with `foreach()`.