@@ -1,6 +1,6 @@
 Package: abn
-Version: 3.0.3
-Date: 2023-11-03
+Version: 3.0.4
+Date: 2023-11-30
 Title: Modelling Multivariate Data with Additive Bayesian Networks
 Authors@R: 
     c(person(given = "Matteo",
@@ -45,7 +45,8 @@ Imports: methods, rjags, nnet, lme4, graph, Rgraphviz, doParallel,
         foreach, mclogit, stringi, Rcpp
 LinkingTo: Rcpp, RcppArmadillo
 Suggests: INLA, knitr, R.rsp, testthat (>= 3.0.0), entropy, moments,
-        boot, brglm, RhpcBLASctl
+        boot, brglm, RhpcBLASctl, Matrix (>= 1.6.3), MatrixModels (>=
+        0.5.3)
 VignetteBuilder: R.rsp
 Additional_repositories: https://inla.r-inla-download.org/R/stable/
 SystemRequirements: Gnu Scientific Library version >= 1.12
@@ -64,6 +65,6 @@ Config/testthat/edition: 3
 RoxygenNote: 7.2.2
 Encoding: UTF-8
 NeedsCompilation: yes
-Packaged: 2023-11-03 07:54:19 UTC; matteo
+Packaged: 2023-11-30 12:17:46 UTC; root
 Repository: CRAN
-Date/Publication: 2023-11-03 10:40:02 UTC
+Date/Publication: 2023-11-30 14:50:06 UTC
