@@ -1,5 +1,5 @@
-1234d20d02c87247b86692ba71e783ee *ChangeLog
-1cb13b033f93a64d83c79bcc764e6082 *DESCRIPTION
+72c4c24fe4034fd49500698096c2a573 *ChangeLog
+70893396bbdd57e7b679e2d4e05b9cfa *DESCRIPTION
 d18dd7daefa9edab003ac2cb1c82f3df *NAMESPACE
 833f99ba3aa1aa4d7c4d777778e74e58 *R/RcppExports.R
 84de62df0f10b46ee688d135f322abfb *R/abn-infotheo.R
@@ -11,7 +11,7 @@ ce290d2fca240b8981b83775f6281e35 *R/abn-methods.R
 d87fa5ff8e0fa5510d045a1c6d7533e1 *R/build_score_cache_bayes.R
 5eb9eb2608af884006e25d568c58c913 *R/build_score_cache_mle.R
 14f75a34e834a73438c5d44144f07558 *R/calc_node_inla_glm.R
-2dadf6a12e307685fd4de212ee487e50 *R/calc_node_inla_glmm.R
+6b70672dc4ddec0fd9f73ad82c5be831 *R/calc_node_inla_glmm.R
 b8159b78e196823c259bb8eda78b729e *R/data.R
 0bbed8f39ab57cd538cbcf76d3178f19 *R/fitabn.R
 d3bd2eff081dac61e62722b1c7367182 *R/fitabn_bayes.R
@@ -26,11 +26,11 @@ ebf9ffebc35ef6e0aa0e98bd06f20eb5 *R/search_hillclimber.R
 5084ab6a9d706dee849860e64aabc72b *R/simulateabn.R
 4950d7356893d416058ec13628f354df *R/tographviz.R
 76a8f645c600ba949bbab7d119379b01 *R/validation.R
-4bab0e7e9b4f5f59ca44c251f26a23a1 *README.md
-1787a3151b91db2bac1a2a33920c8173 *build/vignette.rds
+e107f3d66e354424b275e8afc1b909a6 *README.md
+4c57e383bf2d657cef2ece863a2a31fa *build/vignette.rds
 8ea0326a4c940e9db9e2915e8aa46dc1 *cleanup
-774bbf6d5f02cabc764b162ce9daa8e3 *configure
-809817472dd7b1fbe1c251e12a31f755 *configure.ac
+944da347f5588119379f9cf8f1e3ab47 *configure
+64f7cde6c370b7f5064af02d7b4ae048 *configure.ac
 f498242ff4a74badd6737a403ccfb288 *data/FCV.RData
 7da82ced816b8ea67eb5ab0485aacf60 *data/adg.RData
 82a22fbc5407a5eccdb51eeb23b664b8 *data/ex0data.RData
@@ -206,25 +206,25 @@ bcc01ae8c17227fe3b97f082d8b9d994 *src/mobius.c
 ffc9082e124eb3cc1307052ed969a12d *src/mostprobable.c
 7a607023cee8ea42cb96192bb9d6e57e *src/node_binomial.c
 09ca547384c2f76b4c239ac2c3adf37f *src/node_binomial.h
-58bc81adebf55b32af75872e1373596a *src/node_binomial_marginals_rv.c
+f6df862ac648309500b7135cea7bb16e *src/node_binomial_marginals_rv.c
 f128ab7b33eccd493013b5b5db06dc0d *src/node_binomial_marginals_rv.h
-71f781da7cfce06133d25cb38d1c6a89 *src/node_binomial_rv.c
+1ef1db3067cf10478a2f8ecb997fdc13 *src/node_binomial_rv.c
 c2a6fb98784ced7377230ca3a322a4e4 *src/node_binomial_rv.h
-7998265ccb0c26e94777106d04db1465 *src/node_binomial_rv_inner.c
+960b4817d721dbaf2e7c042710957eda *src/node_binomial_rv_inner.c
 6cd3fc35b8e962499b091a4b244e35d1 *src/node_binomial_rv_inner.h
 ba3e88c7bed2b2a34c3e0823423655a6 *src/node_gaussian.c
 d1ff3144eab0cce1a86f71bb3832ba65 *src/node_gaussian.h
-3da46218b181cdc8904fc6d40f1b3271 *src/node_gaussian_marginals_rv.c
+022b8178122778d028b2079c0b3cc16a *src/node_gaussian_marginals_rv.c
 4e26f82f0d8f6b475bc0da429b1f6847 *src/node_gaussian_marginals_rv.h
-3bdcda4afd3960b084064a79e804af4d *src/node_gaussian_rv.c
+2cc66b4e7e143e801a27d8c33884ad3b *src/node_gaussian_rv.c
 393fb90fd76423ae65771abd85477e63 *src/node_gaussian_rv.h
-8759e4c23cc590d02cf93fc56e1cfbc8 *src/node_gaussian_rv_inner.c
+1e464d692fddcca852bef5546c62d5f6 *src/node_gaussian_rv_inner.c
 b3d35639fdd1a6d2023ef3bddd633f53 *src/node_gaussian_rv_inner.h
 2d40d8d4411adb16f4028a66e8dab1f6 *src/node_poisson.c
 8b5ac651d553cdaa1b6a3d93b1663100 *src/node_poisson.h
-1c2c28e1d266d0b026ce2d717cf4a44d *src/node_poisson_marginals_rv.c
+e3c0241032d5a99d0e5f1c114c5f09f8 *src/node_poisson_marginals_rv.c
 0633086eb57c7a396181734ca1892867 *src/node_poisson_marginals_rv.h
-eab3d14945f8712039da38f1b0920b83 *src/node_poisson_rv.c
+3d812d9210b9ee700ca94c424bcd9114 *src/node_poisson_rv.c
 5d51e052059b4cd1cae43d0fa9cc154d *src/node_poisson_rv.h
 6f29836655219466bc5f19d3c30766eb *src/node_poisson_rv_inner.c
 dd3ded73b8726e333cd5f68605b73e27 *src/node_poisson_rv_inner.h
